--- a/app/views/trip_planner/_banner.html.haml
+++ b/app/views/trip_planner/_banner.html.haml
@@ -90,16 +90,17 @@
           %h4.modal-title Trip planner
         .modal-body
           %form{:id=>"pathFinderForm"}
-			.btn-group{"data-toggle" => "buttons", :style => "margin-bottom:20px"}
+            .btn-group{"data-toggle" => "buttons", :style => "margin-bottom:20px"}
               %button.btn.btn-default{:id => "bike_route", :type => "click"}
                 Bike
               %button.btn.btn-default{:id => "walk_route", :type => "click"}
                 Walk
+              %button.btn.btn-default{:id => "car_route", :type => "click"}
+                Drive
               %br
             .form-group
               %input#from.form-control{:type => "text", :id=>"from"}/
               %br
               %input#from.form-control{:type => "text", :id=>"to"}/
-            %button.btn.btn-default{:type => "submit"} Find Directions
         .modal-footer
           %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
